# guess

./: .clang-format  .pkg  CMakeLists.txt  LICENCE  README.md  azure-pipelines.yml
example/: main.cc
include/guess/: guesser.h  string_util.h  trigram_util.h
src/: guesser.cc
